syntax = "proto3";

package protos.kv;

service KeyValueApi {
  rpc Get (GetArgs) returns (Operation) {}
  rpc Put (PutArgs) returns (Operation) {}
}

enum Code {
  Ok = 0;
  Error = 1;
  InvalidOperation = 2;
  KeyNotFound = 3;
  UnexpectedValue = 4;
}

message GetArgs {
  string key = 2;
}

message GetReply {
  bytes value = 2;
}

message GetOperation {
  GetArgs args = 1;
  GetReply reply = 2;
}

message PutArgs {
  string key = 1;
  bytes value = 2;
}

message PutOperation {
  PutArgs args = 1;
}

message CasArgs {
  string key = 1;
  bytes expected_value = 2;
  bytes actual_value = 3;
}

message CasReply {
  optional bytes actual_value = 3;
}

message CasOperation {
  CasArgs args = 1;
  CasReply reply = 2;
}

message Status {
  Code code = 1;
  string info = 2;
}

message Operation {
  Status status = 1;

  oneof data {
    GetOperation get = 2;
    PutOperation put = 3;
    CasOperation cas = 4;
  }
}

message KeyValueState {
  map<string, bytes> data = 1;
}